# conanTools

./: .gitignore  CMakeLists.txt  build.sh  build_info.ver  buildqnx.bat  buildstart.bat  buildwin.bat  conanfile.txt  toolchain_linux.cmake  toolchain_qnx.cmake  toolchain_windows.cmake  version.cmake
src/tools/: CMakeLists.txt  myfile.cpp  myfile.h  mylog.cpp  mylog.h  myqueue.cpp  myqueue.h
